# denial

./: .gitignore  CMakeLists.txt
include/: core.h  ui.h
src/: core.cpp  main.cpp  ui.cpp
